--- a/benchmark.html
+++ b/benchmark.html
@@ -86,6 +86,20 @@ sitemap:
                                         <td>32</td>
                                         <td>None</td>
                                 </tr>
+				<tr>
+					<td>Dell Latitude E5450</td>
+                                        <td>Intel Core i5</td>
+                                        <td>2.2</td>
+                                        <td>3MB L3</td>
+                                        <td></td>
+                                        <td>8</td>
+                                        <td></td>
+                                        <td>1.2</td>
+                                        <td>Chrome</td>
+                                        <td>Windows 7</td>
+                                        <td>4</td>
+                                        <td>None</td>
+				</tr>
 			</tbody>
 			<tfoot>
 				<tr>
